{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 958,
  "lineage": "ac1b8467-1114-aaa8-1d09-be1c6a3bd257",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324468089952:security-group/sg-0d1774502ea82f8c6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d1774502ea82f8c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20211109123807307200000005",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "324468089952",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065d08734e50413ff"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324468089952:security-group/sg-01abe507a9463c5ac",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-01abe507a9463c5ac",
            "ingress": [],
            "name": "dev-eks-workload20211109123807305200000004",
            "name_prefix": "dev-eks-workload",
            "owner_id": "324468089952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-eks-workload-eks_cluster_sg",
              "k8s.io/cluster-autoscaler/dev-eks-workload": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true"
            },
            "tags_all": {
              "Name": "dev-eks-workload-eks_cluster_sg",
              "k8s.io/cluster-autoscaler/dev-eks-workload": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d08734e50413ff"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324468089952:security-group/sg-06b9bdf4a8f7a53f2",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-06b9bdf4a8f7a53f2",
            "ingress": [],
            "name": "dev-eks-workload20211109123807304200000002",
            "name_prefix": "dev-eks-workload",
            "owner_id": "324468089952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-eks-workload-eks_worker_sg",
              "k8s.io/cluster-autoscaler/dev-eks-workload": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "kubernetes.io/cluster/dev-eks-workload": "owned"
            },
            "tags_all": {
              "Name": "dev-eks-workload-eks_worker_sg",
              "k8s.io/cluster-autoscaler/dev-eks-workload": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "kubernetes.io/cluster/dev-eks-workload": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d08734e50413ff"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2925910080",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01abe507a9463c5ac",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-167344631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01abe507a9463c5ac",
            "self": false,
            "source_security_group_id": "sg-06b9bdf4a8f7a53f2",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3734377889",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06b9bdf4a8f7a53f2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3881502752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06b9bdf4a8f7a53f2",
            "self": false,
            "source_security_group_id": "sg-01abe507a9463c5ac",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3208671547",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06b9bdf4a8f7a53f2",
            "self": false,
            "source_security_group_id": "sg-01abe507a9463c5ac",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2254152308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06b9bdf4a8f7a53f2",
            "self": false,
            "source_security_group_id": "sg-06b9bdf4a8f7a53f2",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}